--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -80,7 +80,7 @@
                                     </SwipeView.RightItems>
 
                                     <StackLayout>
-                                        <Frame Padding="20, 10, 10, 10" BorderColor="Transparent" InputTransparent="False" CornerRadius="0">
+                                        <Frame Padding="20, 10, 10, 10" BorderColor="Transparent" BackgroundColor="White" InputTransparent="False" CornerRadius="0">
 
                                             <Frame.GestureRecognizers>
                                                 <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatuViewModel}}, Path=VisualizaCapturaCommand}"
