--- a/TolyID/MVVM/Views/TatusCadastradosView.xaml
+++ b/TolyID/MVVM/Views/TatusCadastradosView.xaml
@@ -35,44 +35,69 @@
                     </SwipeItems>
                 </SwipeView.RightItems>
 
-                <Frame Margin="0, 10, 0, 10" CornerRadius="20" HeightRequest="90" BorderColor="Transparent" InputTransparent="False" Padding="20, 10, 15, 10">
+                
 
-                    <Frame.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatusCadastradosViewModel}}, Path=VisualizaTatuCommand}"
-                                              CommandParameter="{Binding .}"/>
-                    </Frame.GestureRecognizers>
-
-                    <Grid RowDefinitions="*, *" ColumnDefinitions="6*, 4*" ColumnSpacing="10">
-
-                        <Label Text="{Binding IdentificacaoAnimal, StringFormat='Id: {0}'}" 
-                           TextColor="{StaticResource Primary}"
-                           FontFamily="Inter-SemiBold"
-                           FontSize="18" 
-                           VerticalOptions="Center"/>
-
-                        <Label Text="{Binding NumeroMicrochip, StringFormat='Chip: {0}'}"
-                           TextColor="{StaticResource Primary}"
-                           FontFamily="InterRegular"
-                           Grid.Row="1" 
-                           FontSize="18" 
-                           VerticalOptions="Center">
-
-                            <Label.Triggers>
-                                <DataTrigger TargetType="Label" Binding="{Binding NumeroMicrochip}" Value="0">
-                                    <Setter Property="Text" Value="Chip: não cadastrado"/>
-                                </DataTrigger>
-                            </Label.Triggers>
-
-                        </Label>
-
-                    </Grid>
-                </Frame>
             </SwipeView>
         </DataTemplate>
               
     </ContentPage.Resources>
 
-    <CollectionView ItemsSource="{Binding Tatus}" 
-                    ItemTemplate="{StaticResource ListaDeTatusTemplate}"/>
+    <Border>
+        <StackLayout Spacing="17" Padding="0, 20, 0, 10">
+            <Label Text="Tatus" 
+                    Style="{StaticResource LabelTitulo}" 
+                    TextColor="{StaticResource Texto}"
+                    FontSize="16"/>
+
+            <ScrollView>
+                <CollectionView ItemsSource="{Binding Tatus}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="models:Tatu">
+                            <SwipeView>
+                                
+                                <SwipeView.RightItems>
+                                    <SwipeItems SwipeBehaviorOnInvoked="Close">
+                                        <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatusCadastradosViewModel}}, Path=DeletaTatuCommand}" CommandParameter="{Binding .}">
+                                            <Frame BorderColor="Transparent" BackgroundColor="LightPink"
+                                                   CornerRadius="0"
+                                                   Padding="10"
+                                                   WidthRequest="70">
+                                                <Image Source="icone_apagar.png" Scale=".45"/>
+                                            </Frame>
+                                        </SwipeItemView>
+                                    </SwipeItems>
+                                </SwipeView.RightItems>
+
+                                <StackLayout>
+                                    <Frame Padding="20, 10, 10, 10" BorderColor="Transparent" BackgroundColor="White" InputTransparent="False" CornerRadius="0">
+
+                                        <Frame.GestureRecognizers>
+                                            <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatusCadastradosViewModel}}, Path=VisualizaTatuCommand}"
+                                                                  CommandParameter="{Binding .}"/>
+                                        </Frame.GestureRecognizers>
+
+                                        <StackLayout>
+                                            <Label Text="{Binding IdentificacaoAnimal, StringFormat='Id: {0}'}" 
+                                                   FontFamily="Inter-Medium" 
+                                                   FontSize="17"  
+                                                   TextColor="{StaticResource Texto}"/>
+                                            <Label Text="{Binding NumeroMicrochip, StringFormat='Chip: {0}'}" 
+                                                   FontFamily="Inter-Regular" 
+                                                   FontSize="15" 
+                                                   TextColor="{StaticResource Texto}"
+                                                   Opacity=".85"/>
+                                        </StackLayout>
+                                    </Frame>
+                                    <BoxView BackgroundColor="Black" Opacity=".25" HeightRequest=".1"/>
+                                </StackLayout>
+
+                            </SwipeView>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </ScrollView>
+        </StackLayout>
+        
+    </Border>
 
 </ContentPage>
