--- a/TolyID/Resources/Styles/Colors.xaml
+++ b/TolyID/Resources/Styles/Colors.xaml
@@ -7,7 +7,7 @@
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
     <Color x:Key="Primary">#125FA7</Color>
-    <Color x:Key="PrimaryDark">#ac99ea</Color>
+    <Color x:Key="PrimaryDark">#125FA7</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
     <Color x:Key="Secondary">#FDA905</Color>
     <Color x:Key="SecondaryDarkText">#9880e5</Color>
@@ -16,7 +16,6 @@
     <Color x:Key="Background">#D8DEEB</Color>
     <Color x:Key="Texto">#505057</Color>
     
-
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Magenta">#D600AA</Color>
