refactor: nova navegação no cadastro de capturas, implementação de validações nos campos

--- a/TolyID/MVVM/Views/CadastroCapturaTabbedView.xaml
+++ b/TolyID/MVVM/Views/CadastroCapturaTabbedView.xaml
@@ -12,12 +12,12 @@
              SelectedTabColor="{StaticResource Secondary}">
 
     <TabbedPage.ToolbarItems >
-        <ToolbarItem Text="Voltar" Command="{Binding VoltarCommand}"/>
+        <!--<ToolbarItem Text="Voltar" Command="{Binding VoltarCommand}"/>-->
     </TabbedPage.ToolbarItems>
 
-    <views:DadosGeraisView/>
+    <!--<views:DadosGeraisView/>
     <views:FichaAnestesicaView/>
     <views:BiometriaView/>
-    <views:AmostrasView/>
+    <views:AmostrasView/>-->
 
 </TabbedPage>
