--- a/TolyID/MVVM/Views/CadastroDeCaptura/FichaAnestesicaView.xaml
+++ b/TolyID/MVVM/Views/CadastroDeCaptura/FichaAnestesicaView.xaml
@@ -4,40 +4,50 @@
              xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
              xmlns:models="clr-namespace:TolyID.MVVM.Models"
              xmlns:viewmodels="clr-namespace:TolyID.MVVM.ViewModels"
+             xmlns:input="clr-namespace:InputKit.Shared.Controls;assembly=InputKit.Maui"
+             xmlns:validation="clr-namespace:InputKit.Shared.Validations;assembly=InputKit.Maui"
              x:DataType="viewmodels:CadastroCapturaViewModel"
              x:Class="TolyID.MVVM.Views.CadastroDeCaptura.FichaAnestesicaView"
-             Title="2"
-             BackgroundColor="White">
+             Title="Ficha Anestésica"
+             BackgroundColor="White"
+             Shell.BackgroundColor="{StaticResource Primary}"
+             Shell.TitleColor="White">
 
     <ScrollView x:Name="FichaAnestesicaScrollView">
-        <StackLayout Spacing="20" Padding="20">
 
-            <Label Text="FICHA ANESTÉSICA" 
-                   TextColor="{StaticResource Primary}" 
-                   FontSize="18" FontAttributes="Bold" 
-                   HorizontalTextAlignment="Center"/>
-
+        <input:FormView Spacing="20" Padding="20" SubmitCommand="{Binding IrParaBiometriaCommand}">
             <material:TextField Title="Tipo de Anestésico ou Dose"
-                                Text="{Binding Captura.FichaAnestesica.TipoAnestesicoOuDose}"/>
+                                Text="{Binding Captura.FichaAnestesica.TipoAnestesicoOuDose}">
+                <validation:RequiredValidation Message="Campo obrigatório!"/>
+            </material:TextField>
 
             <material:TextField Title="Via de Administração"
-                        Text="{Binding Captura.FichaAnestesica.ViaDeAdministracao}"/>
+                        Text="{Binding Captura.FichaAnestesica.ViaDeAdministracao}">
+                <validation:RequiredValidation Message="Campo obrigatório!"/>
+            </material:TextField>
 
             <material:TimePickerField Title="Aplicação"
-                         Time="{Binding Captura.FichaAnestesica.Aplicacao}"/>
+                            Time="{Binding Captura.FichaAnestesica.Aplicacao}">
+                <validation:RequiredValidation Message="Campo obrigatório!"/>
+            </material:TimePickerField>
 
             <material:TimePickerField Title="Indução"
-                         Time="{Binding Captura.FichaAnestesica.Inducao}"/>
+                            Time="{Binding Captura.FichaAnestesica.Inducao}">
+                <validation:RequiredValidation Message="Campo obrigatório!"/>
+            </material:TimePickerField>
 
             <material:TimePickerField Title="Retorno"
-                         Time="{Binding Captura.FichaAnestesica.Retorno}"/>
+                            Time="{Binding Captura.FichaAnestesica.Retorno}">
+                <validation:RequiredValidation Message="Campo obrigatório!"/>
+            </material:TimePickerField>
+
 
             <Label Text="Parâmetros Fisiológicos a cada 10 minutos" 
-                   TextColor="{StaticResource Primary}"
-                   FontAttributes="Bold"
-                   FontSize="15"
-                   HorizontalTextAlignment="Center"
-                   VerticalTextAlignment="Center"/>
+                    TextColor="{StaticResource Primary}"
+                    FontAttributes="Bold"
+                    FontSize="15"
+                    HorizontalTextAlignment="Center"
+                    VerticalTextAlignment="Center"/>
 
             <Grid ColumnDefinitions="*, *, *, *" Padding="0, 0, 0, 0">
                 <Label Text="  FC" Style="{StaticResource LabelNomeCampo}" FontSize="12" HorizontalTextAlignment="Start"/>
@@ -49,13 +59,13 @@
             <CollectionView Grid.Row="1" 
                             ItemsSource="{Binding ParametrosFisiologicos}" 
                             x:Name="ParametrosCollectionView">
-                
+
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="models:ParametroFisiologico">
 
                         <Grid ColumnDefinitions="*, *, *, *"
-                              ColumnSpacing="10"
-                              Margin="0, 0, 0, 10">
+                                ColumnSpacing="10"
+                                Margin="0, 0, 0, 10">
 
                             <material:TextField Text="{Binding Fr}" Keyboard="Numeric"/>
                             <material:TextField Text="{Binding Fc}" Keyboard="Numeric" Grid.Column="1"/>
@@ -77,6 +87,13 @@
                     Clicked="AdicionarParametro_Clicked"
                     Command="{Binding AdicionaParametrosFisiologicosCommand}"/>
 
-        </StackLayout>
+            <Button Text="Próximo"
+                    TextColor="White"
+                    Background="{StaticResource Primary}"
+                    WidthRequest="100"
+                    CornerRadius="25"
+                    input:FormView.IsSubmitButton="True"/>
+        </input:FormView>
+
     </ScrollView>
 </ContentPage>
