--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -66,7 +66,7 @@
                             <DataTemplate x:DataType="model:Captura">
 
                                 <SwipeView>
-                                    <SwipeView.RightItems>
+                                    <SwipeView.LeftItems>
                                         <SwipeItems SwipeBehaviorOnInvoked="Close">
                                             <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatuViewModel}}, Path=DeletaCapturaCommand}" CommandParameter="{Binding .}">
                                                 <Frame BorderColor="Transparent" BackgroundColor="LightPink"
@@ -77,7 +77,7 @@
                                                 </Frame>
                                             </SwipeItemView>
                                         </SwipeItems>
-                                    </SwipeView.RightItems>
+                                    </SwipeView.LeftItems>
 
                                     <StackLayout>
                                         <Frame Padding="20, 10, 10, 10" BorderColor="Transparent" BackgroundColor="White" InputTransparent="False" CornerRadius="0">
